Added event listener to a button. Change title text onclick.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     </head>
     <body>
      <header id="hero">
-         <h1>I'm learning HTML and CSS</h1>
+         <h1 id="myTitle">I'm learning HTML and CSS</h1>
+         <input type="button" id="headerBtn" value="Click Me"/>
      </header>
      
      <main>
