Change button values onclick

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
      <header id="hero">
          <h1 id="myTitle">I'm learning HTML and CSS</h1>
-         <input type="button" id="headerBtn" value="Click Me"/>
+     <button id="headerBtn">Click Me!</button>
      </header>
      
      <main>
